# verification-events

./: LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/verification_events/: __init__.py  event.py  log.py
tests/: test_events.py
